#11 #29 #33 #35 Added 1440p Resolution. Fixed side menu color and alignment issues.

--- a/capitalismx-ui/src/main/resources/css1440p/menu1440p.css
+++ b/capitalismx-ui/src/main/resources/css1440p/menu1440p.css
@@ -10,7 +10,7 @@
 }
 
 .menulabel {
-	-fx-font-size: 32pt;
+	-fx-font-size: 40pt;
 	-fx-text-fill: darkorange;
 }
 
