--- a/capitalismx-ui/src/main/resources/css1440p/modul1440p.css
+++ b/capitalismx-ui/src/main/resources/css1440p/modul1440p.css
@@ -17,7 +17,7 @@
  * Section for reusable module-components.
  */
 .header {
-	-fx-font: bold 22px 'Prime';
+	-fx-font: bold 29px 'Prime';
 	-fx-text-fill: -fx-dark;
 }
 
@@ -37,7 +37,7 @@
  
  
 .list-label {
-	-fx-font-size: 12px;
+	-fx-font-size: 16px;
 	-fx-font-family: 'Prime';
  }
  
