--- a/capitalismx-ui/src/main/resources/css1440p/sideMenu1440p.css
+++ b/capitalismx-ui/src/main/resources/css1440p/sideMenu1440p.css
@@ -6,3 +6,7 @@
 .departmentButton:hover {
 	-fx-background-color: -fx-primary;
 }
+
+.sideMenuAnchor {
+	-fx-background-color: -fx-dark;
+}
